--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -7,6 +7,7 @@
 
   <title>reveal.js</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Overpass|Overpass+Mono" rel="stylesheet">
   <link rel="stylesheet" href="css/reveal.css">
   <link rel="stylesheet" href="css/theme/black.css">
 
@@ -31,7 +32,7 @@
         <p>Stefan Rimaila / <a href="https://twitter.com">@piparkaq</a></p>
       </section>
 
-      <section>
+      <!-- <section>
         <h2>Agenda</h2>
 
         <div class="cols">
@@ -52,25 +53,21 @@
           <div>
             <h3>Hands-on part</h3>
             <ol>
-              <li>Thinking through a timeline</li>
-              <li>Excercise: Simple Events</li>
-              <li>Creating alternate timelines</li>
-              <li>Excercise: Events, continued</li>
-              <li>Smashing timelines back together</li>
-              <li>Excercise: You're Smarter Than You Think (Combinators)</li>
-              <li>Ending one timeline and starting a second</li>
-              <li>Excercise: Take a REST</li>
-              <li>Parallel timelines</li>
-              <li>Excercise: Combinators, values, errors and you</li>
+              <li>Excercise: Thinking through a timeline<br>Streams from Events</li>
+              <li>Excercise: Deriving data from a Stream<br>Creating alternate timelines</li>
+              <li>Excercise: You're Smarter Than You Think (Combinators)<br>Smashing timelines back together</li>
+              <li>Excercise: Take a REST<br>Ending one timeline and starting a second</li>
+              <li>Excercise: Combinators, values, errors and you<br>Parallel timelines</li>
             </ol>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section data-markdown="md/brief-history.md"></section>
-      <!-- <section data-markdown="md/problems-in-async-js.md"></section>
-      <section data-markdown="md/looking-into-observables.md"></section>
-      <section data-markdown="md/advantages-of-observables.md"></section> -->
+      <section data-markdown="md/00-overview.md"></section>
+      <section data-markdown="md/01-brief-history.md"></section>
+      <section data-markdown="md/02-problems-caused-by-asynchronicity.md"></section>
+      <section data-markdown="md/advantages-of-observables.md"></section>
+      <section data-markdown="md/pitfalls-of-observables.md"></section>
     </div>
   </div>
 
