--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -66,6 +66,8 @@
       <section data-markdown="md/00-overview.md"></section>
       <section data-markdown="md/01-brief-history.md"></section>
       <section data-markdown="md/02-problems-caused-by-asynchronicity.md"></section>
+      <section data-markdown="md/04-anatomy-of-observable.md"
+               data-separator-vertical="^v-v-v$"></section>
       <section data-markdown="md/advantages-of-observables.md"></section>
       <section data-markdown="md/pitfalls-of-observables.md"></section>
     </div>
