--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -68,6 +68,12 @@
       <section data-markdown="md/02-problems-caused-by-asynchronicity.md"></section>
       <section data-markdown="md/04-anatomy-of-observable.md"
                data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/04-01-exercise.md"
+               data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/04-02-modifying-observables.md"
+               data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/04-02-exercise.md"
+               data-separator-vertical="^v-v-v$"></section>
       <section data-markdown="md/advantages-of-observables.md"></section>
       <section data-markdown="md/pitfalls-of-observables.md"></section>
     </div>
