Add more chapters

--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -63,9 +63,14 @@
         </div>
       </section> -->
 
-      <section data-markdown="md/00-overview.md"></section>
-      <section data-markdown="md/01-brief-history.md"></section>
-      <section data-markdown="md/02-problems-caused-by-asynchronicity.md"></section>
+      <section data-markdown="md/00-overview.md"
+               data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/01-brief-history.md"
+               data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/02-problems-caused-by-asynchronicity.md"
+               data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/pitfalls-of-observables.md"
+               data-separator-vertical="^v-v-v$"></section>
       <section data-markdown="md/04-anatomy-of-observable.md"
                data-separator-vertical="^v-v-v$"></section>
       <section data-markdown="md/04-01-exercise.md"
@@ -74,8 +79,10 @@
                data-separator-vertical="^v-v-v$"></section>
       <section data-markdown="md/04-02-exercise.md"
                data-separator-vertical="^v-v-v$"></section>
-      <section data-markdown="md/advantages-of-observables.md"></section>
-      <section data-markdown="md/pitfalls-of-observables.md"></section>
+      <section data-markdown="md/04-03-events-and-promises.md"
+               data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/04-04-observable-chains.md"
+               data-separator-vertical="^v-v-v$"></section>
     </div>
   </div>
 
