--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -83,6 +83,8 @@
                data-separator-vertical="^v-v-v$"></section>
       <section data-markdown="md/04-04-observable-chains.md"
                data-separator-vertical="^v-v-v$"></section>
+      <section data-markdown="md/04-05-hands-dirty.md"
+               data-separator-vertical="^v-v-v$"></section>
     </div>
   </div>
 
