Front slide change

--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -29,7 +29,8 @@
     <div class="slides">
       <section>
         <h2>Asynchronic Programming Workshop</h2>
-        <p>Stefan Rimaila / <a href="https://twitter.com">@piparkaq</a></p>
+        <p>Stefan Rimaila</p>
+        <p><a href="https://twitter.com">@piparkaq</a> — <a href="https://github.com/stuf">github.com/stuf</a></p>
       </section>
 
       <!-- <section>
