Add resources to front

--- a/async-workshop/index.html
+++ b/async-workshop/index.html
@@ -27,7 +27,7 @@
 <body>
   <div class="reveal">
     <div class="slides">
-      <section>
+      <section class="front-slide" data-background-image="img/toten.jpg">
         <h2>Asynchronic Programming Workshop</h2>
         <p>Stefan Rimaila</p>
         <p><a href="https://twitter.com">@piparkaq</a> — <a href="https://github.com/stuf">github.com/stuf</a></p>
